--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "openai": "^5.10.2",
     "serverless-http": "^3.2.0",
     "validator": "^13.12.0"
   }
