--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.9",
     "openai": "^5.10.2",
     "serverless-http": "^3.2.0",
