--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.1.9",
     "openai": "^5.10.2",
     "serverless-http": "^3.2.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "web-push": "^3.6.7"
   }
 }
